// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Surface with default elevation 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "bottom": undefined,
      "left": undefined,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 3,
      "top": undefined,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 1,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "#6750A40D",
          "height": 50,
          "width": 100,
        }
      }
    >
      <Text
        style={Object {}}
      >
        Surface
      </Text>
    </View>
  </View>
</View>
`;

exports[`should render Surface with elevation level 3 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "alignSelf": undefined,
      "bottom": undefined,
      "left": undefined,
      "position": undefined,
      "right": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 4,
        "width": 0,
      },
      "shadowOpacity": 0.15,
      "shadowRadius": 8,
      "top": undefined,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 3,
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "#6750A41C",
          "height": 50,
          "width": 100,
        }
      }
    >
      <Text
        style={Object {}}
      >
        Surface
      </Text>
    </View>
  </View>
</View>
`;
